syntax = "proto3";

option csharp_namespace = "Financial.Application.Protos";

package Financial;

message FinanceAccountsProtoDto
{
	string Id = 1;
	int32 FinanceAccountType = 2;
}

message FinanceAccountsSingleRequest
{
	string Id= 1;
	int32 FinanceAccountType = 2;
}

message FinanceAccountsCreateRequest
{
	string PaymentTermsId = 1;
	string FinanceAccountItemId = 2;
	int32 FinanceAccountType = 3;
	string PersonId = 4;
}
message FinanceAccountsUpdateRequest
{
	string PaymentTermsId = 1;
	string FinanceAccountItemId = 2;
	int32 FinanceAccountType = 3;
	string PersonId = 4;
}

message FinanceAccountsRequest{

}

message FinanceAccountsDeleteResponse{
	string Result = 1; 
}

service Finance{
	
	rpc GetFinanceAccounts(FinanceAccountsSingleRequest) returns(FinanceAccountsProtoDto){};

	rpc GetAllFinanceAccounts(FinanceAccountsRequest)returns(FinanceAccountsProtoDto){};

	rpc CreateFinanceAccounts(FinanceAccountsCreateRequest)returns(FinanceAccountsProtoDto){};

	rpc UpdateFinancAccounts(FinanceAccountsUpdateRequest)returns(FinanceAccountsProtoDto){};

	rpc DeleteFinanceAccounts(FinanceAccountsSingleRequest) returns(FinanceAccountsDeleteResponse){};

}